<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesanTiket">


    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="39dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:background="#E4DDDD"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/cara_reschedule_penerbangan"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="331dp"
        android:layout_height="39dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="49dp"
        android:background="#E4DDDD"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/cara_refund_tiket_pesawat"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:src="@drawable/pesawatt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="340dp"
        android:layout_height="214dp"
        android:layout_marginTop="188dp"
        android:background="#EAE7E7"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">


        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="97dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="291dp"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:background="#C3BCBC"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_flight_takeoff_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/batam_bth"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:background="#C3BCBC"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_flight_land_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/tujuan"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="314dp"
            android:layout_height="97dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:background="#C3BCBC"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_date_range_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/tanggal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="291dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:background="#C3BCBC"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_people_alt_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/_1_penumpang_ekonomi"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_home_24"
            android:layout_marginTop="5dp"
            android:layout_marginStart="1dp"/>

        <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_credit_card_24"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"/>
        <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_history_24"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"/>


        <ImageView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_perm_identity_24"
            android:layout_marginTop="5dp"
            android:layout_marginStart="18dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="79dp"
        android:text="@string/cari_penerbangan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="239dp"
        android:text="@string/informasi_tambahan"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="49dp"
        android:background="#E4DDDD"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/syarat_penerbangan"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pesawat"
        android:textColor="#FBDADA"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="SpUsage" />


</androidx.constraintlayout.widget.ConstraintLayout>
